<resources>
    <string name="app_name">Velma</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="client_id">592508973780-dsbqcvnifrjd5in2bvaf4ofm43p4t5ft.apps.googleusercontent.com</string>
    <string name="client_secret">MXCHGTsRaSWT47olZhXpBxz4</string>
    <string name="logout">Logout</string>

    <string name="event_name">Event Name</string>
    <string name="addevent">Title</string>
    <string name="addlocation">Location</string>
    <string name="submit_event">Save Event</string>
    <string name="enter_startdate">Start Date</string>
    <string name="enter_enddate">End Date</string>
    <string name="enter_starttime">Start Time</string>
    <string name="enter_endtime">End Time</string>
    <string name="test_event">test event</string>
    <string name="eventdesc">Description</string>Enter Event/string>
    <string name="alarm_every">Alarm every ...</string>
    <string name="welcome_text">Welcome to Velma</string>

    <string name="action_today">Today</string>
    <string name="action_save">SAVE</string>
    <string name="action_day_view">Day View</string>
    <string name="action_three_day_view">3 Day View</string>
    <string name="action_week_view">Week View</string>
    <string name="action_monthly_view">Monthly View</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>

    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
     <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>

    <string-array name="whale_array">
        <item>Pick a whale sound!</item>
        <item>Humpback bubble net</item>
        <item>Humpback contact Call Moo</item>
        <item>Humpback contact Call Whup</item>
        <item>Humpback feeding Call</item>
        <item>Humpback flipper splash</item>
        <item>Humpback Tail slaps</item>
        <item>Humpback whale song</item>
        <item>Humpback whale song with outboard engine</item>
        <item>Humpback wheeze blows</item>
        <item>Killer whale echolocation clicks</item>
        <item>Killer whale offshore</item>
        <item>Killer whale resident</item>
        <item>Killer whale transient</item>
    </string-array>

    <string name="invitation_title">Join my event</string>

    <string-array name="mode_array">
        <item>Driving</item>
        <item>walking</item>
        <item>bicycling</item>
    </string-array>

    <string name="title_activity_location">Location</string>
    <string name="title_activity_accept_event">Accept</string>
    <string name="title_activity_decline_event">Decline</string>
    <string name="title_activity_update_onboarding">UpdateOnboardingActivity</string>

    <string-array name="reply_choices">
        <item>Okay</item>
        <item>Cancel</item>
        <item>Notify Everyone I will be coming late</item>
    </string-array>
    <string name="title_activity_show_event_details">ShowEventDetails</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>


</resources>
